# htc

./: .clang-format  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc  CITATION.cff  Dockerfile  LICENSE.md  MANIFEST.in  README.md  base.Dockerfile  conftest.py  docker-compose.yml  docker_startup.py  hubconf.py  link_checker_config.json  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  run_docker.py  run_tests.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  dataset.md  feature_request.md  question.md
.github/workflows/: build_wheels.yml  dataset.yml  docker_image.yml  release.yml  tests.yml
LICENSES/: MIT.txt
dependencies/: Dockerfile  README.md  base.Dockerfile  docker-compose.yml  requirements-dev.txt  requirements-docs.txt  requirements-extra.txt  requirements-organ-clamping.txt  requirements-tests.txt  requirements.txt
hooks/: check_notebooks.py  check_public_readme.py
htc/: __init__.py  cli.py  run_info.py  settings.py  settings_seg.py
htc/cluster/: ClusterConnection.py  RunGenerator.py  UpdateCluster.py  utils.py
htc/context/: context_transforms.py  settings_context.py
htc/cpp/: ParallelExecution.h  PerformanceComparisonNunique.ipynb  __init__.py  bindings.cpp  colorchecker_automask.cpp  evaluate_superpixels.cpp  hierarchical_bootstrapping.h  kfold_combinations.cpp  map_label_image.cpp  nunique.cpp  segmentation_mask.cpp  tensor_mapping.h
htc/data_exploration/: DataStatistics.ipynb  PrecisionAnalysis.ipynb
htc/data_processing/: DatasetIteration.py  run_l1_normalization.py  run_median_spectra.py  run_parameter_images.py  run_raw16.py  run_standardization.py  run_superpixel_prediction.py
htc/evaluation/: BootstrapRankingExample.ipynb  KFoldSelection.ipynb  analyze_tfevents.py  bootstrapped_metric.py  evaluate_images.py  evaluate_superpixels.py  ranking.py  run_compare_runs.py  run_ranking_lr.py  run_table_generation.py  utils.py
htc/fonts/: set_font.py
htc/model_processing/: ImageConsumer.py  Predictor.py  Runner.py  SinglePredictionTable.py  SinglePredictor.py  TestEnsemble.py  TestLeaveOneOutPredictor.py  TestPredictor.py  ValidationPredictor.py  run_add_nsd.py  run_image_figures.py  run_inference.py  run_median_test_table.py  run_multiple.py  run_tables.py
htc/models/: run_dataset_size.py  run_generate_configs.py  run_inference_timeit.py  run_model_comparison.py  run_prepare_pretrained.py  run_pretrained_semantic_models.py  run_seed_variations.py  run_training.py
htc/rater_variability/: rater_evaluation.py  run_nsd_thresholds.py
htc/special/: run_python_versions.py
htc/tissue_atlas/: ExperimentAnalysis.ipynb  MetricAggregationClassification.py  run_test_table_generation.py  settings_atlas.py  tables.py
htc/tissue_atlas_open/: FileReference.ipynb  profiles.py  run_label_profiles.py  run_readme_gif.py
htc/tivita/: DataPath.py  DataPathMultiorgan.py  DataPathMultiorganNamed.py  DataPathReference.py  DataPathSepsis.py  DataPathSepsisICU.py  DataPathTivita.py  DatasetSettings.py  colorscale.py  hsi.py  metadata.py  rgb.py
htc/utils/: AdvancedJSONEncoder.py  ColorcheckerMaskCreation.ipynb  ColorcheckerReader.py  ColoredFileLog.py  Config.py  DatasetDir.py  Datasets.py  DelayedFileHandler.py  DomainMapper.py  DuplicateFilter.py  JSONSchemaMeta.py  LDA.py  LabelMapping.py  MeasureTime.py  MultiPath.py  PathHashMapper.py  SLICWrapper.py  SpectrometerReader.py  Task.py  _MedianTableHelper.py  blosc_compression.py  colors.py  config.schema  docs_helpers.py  file_transfer.py  general.py  helper_functions.py  import_extra.py  parallel.py  paths.py  renderjson.js  run_system_monitor.py  specular_highlights.py  sqldf.py  test_helpers.py  type_from_string.py  unify_path.py  visualization.py
htc_projects/atlas/: ExperimentAnalysis.ipynb  settings_atlas.py  tables.py
htc_projects/atlas_open/: profiles.py  run_label_profiles.py  run_readme_gif.py
htc_projects/benchmarking/: run_benchmark.py  settings_benchmarking.py
htc_projects/context/: context_transforms.py  settings_context.py
htc_projects/rat/: settings_rat.py  tables.py
htc_projects/sepsis_icu/: FeatureImportance.py  baseline_methods.py  run_feature_adding_tables.py  run_feature_importance_rankings.py  sepsis_evaluation.py  settings_sepsis_icu.py  tables.py  utils.py  visualization_helpers.py
htc_projects/species/: ProjectionLearner.py  apply_transforms_paths.py  run_create_projections.py  run_pretrained_species_models.py  run_species_models.py  run_transform_spectra.py  settings_species.py  species_evaluation.py  species_transforms.py  tables.py
paper/Chirurg2022/: DerChirurg2022.ipynb
paper/MIA2021/: Benchmarking.ipynb  DataStatistics.ipynb  DatasetSize.ipynb  GeneralizationError.ipynb  ImageExamples.ipynb  Intro.ipynb  NSDThresholds.ipynb  SpectraVisualization.ipynb  SuperpixelReference.ipynb  interactive_example_spectra.ipynb  model_overview_samples.ipynb  reproducibility.md  run_generate_variables.py
paper/MIA2022/: Benchmarking.ipynb  DataStatistics.ipynb  DatasetSize.ipynb  GeneralizationError.ipynb  ImageExamples.ipynb  RankingDifferenceLR.ipynb  annotation_protocol.ipynb  interactive_example_spectra.ipynb  model_overview_samples.ipynb  reproducibility.md  run_generate_variables.py
paper/MIA2024/: BootstrapRanking.ipynb  ExamplePredictions.ipynb  NeighborRemoval.ipynb  SpatialGranularityComparison.ipynb  TaskPerformanceComparison.ipynb  reproducibility.md  run_generate_variables.py
paper/MICCAI2023/: ExampleFailureCase.ipynb  OrganTransplantationExample.ipynb  RemovalCM.ipynb  TaskPerformanceComparison.ipynb  TestDatasetSamples.ipynb  reproducibility.md  run_generate_variables.py
paper/NatureBME2025/: DataStatistics.ipynb  DomainShiftPerformance.ipynb  ExamplePredictions.ipynb  ICGPerformance.ipynb  MalperfusedSpectra.ipynb  __init__.py  (+7 more)
tests/: README.md  conftest.py  nbval_sanitize.cfg  test_cli.py
tutorials/: CreatingPredictions.ipynb  CustomDataPath.md  FileReference.ipynb  General.ipynb  MedianSpectra.ipynb  XenoSpectral.ipynb  website_example.py  website_xeno_spectral_example.py
(+374 files in other folders)
